--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,16 @@
 <p-table *ngIf="data" [value]="rowData" dataKey="name">
     <ng-template pTemplate="header">
         <tr>
-            <th style="width: 3rem"></th>
-            <th>Header Dates</th>
-            <th *ngFor="let ev of data.expectedVoteValues">{{ev.date}}</th>
+            <td style="width: 3rem"></td>
+            <td>Header Dates</td>
+            <td class="center" *ngFor="let ev of data.expectedVoteValues">{{ev.date}}</td>
         </tr>
         <tr>
             <td></td>
             <td>
                 Expected Total Vote
             </td>
-            <td *ngFor="let ev of data.expectedVoteValues">{{ev.count}}</td>
+            <td class="center" *ngFor="let ev of data.expectedVoteValues">{{ev.count}}</td>
         </tr>
     </ng-template>
    
@@ -27,9 +27,9 @@
     </ng-template>
     <ng-template pTemplate="rowexpansion" let-row>
         <tr>
-            <td colspan="4">
-                <div class="p-p-3">
-                    <p-table [value]="row.states" dataKey="name">
+            <td colspan="4" style="width: 100%;">
+                <div>
+                    <p-table [value]="row.states" dataKey="name" >
                         <ng-template pTemplate="body" let-state>
                             <tr>
                                 <td >{{state.name}}</td>
