--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,17 +27,17 @@
     </ng-template>
     <ng-template pTemplate="rowexpansion" let-row>
         <tr>
-            <td colspan="4" style="width: 100%;">
-                <div>
+            <td [attr.colspan]="data.expectedVoteValues.length+2" >
+               
                     <p-table [value]="row.states" dataKey="name" >
                         <ng-template pTemplate="body" let-state>
                             <tr>
                                 <td >{{state.name}}</td>
-                                <td class="center" *ngFor="let vote of state.votes">{{vote}}</td>
+                                <td class="center-coll" *ngFor="let vote of state.votes">{{vote}}</td>
                             </tr>
                         </ng-template>
                     </p-table>
-                </div>
+              
             </td>
         </tr>
     </ng-template>
