--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,15 +28,17 @@
     <ng-template pTemplate="rowexpansion" let-row>
         <tr>
             <td [attr.colspan]="data.expectedVoteValues.length+2" >
-               
+                <div class="p-p-2">
                     <p-table [value]="row.states" dataKey="name" >
                         <ng-template pTemplate="body" let-state>
                             <tr>
+                                <td style="width: 3rem"></td>
                                 <td >{{state.name}}</td>
-                                <td class="center-coll" *ngFor="let vote of state.votes">{{vote}}</td>
+                                <td class="center" *ngFor="let vote of state.votes">{{vote}}</td>
                             </tr>
                         </ng-template>
                     </p-table>
+                </div>
               
             </td>
         </tr>
